# json-spec-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  input-rules.json  input.json  json_converter.py  sim.pvd  tags.md
.github/workflows/: continuous.yml
cmake/jse/: jse_add_embedded_spec.cmake  jse_add_spec.cmake  jse_prepend_current_path.cmake  jse_set_source_group.cmake  jse_warnings.cmake
cmake/sjv/: sjv_prepend_current_path.cmake  sjv_set_source_group.cmake  sjv_warnings.cmake
data/: default.json  default_rules.json  input-rules.json  input.json  input_01.json  input_02.json  nut-big.stl  push_box.json  rule_generator.py  rules.json  rules_01.json  rules_02.json  rules_03.json  rules_04.json  screw-big.msh  screw.json  sling_shots.json  tmp_rules.json
data/polyfem-data-jsons/: common.json
data/polyfem-data-jsons/2D/: golf-ball-doformable-wall.json  golf-ball.json  initial_angular_velocity.json
data/polyfem-data-jsons/2D/codimensional/: disk-codim-points.json
data/polyfem-data-jsons/2D/friction/: arch.json  card-house.json  circle-rollers.json  high-school-physics-slopetest-mu=0.49.json  high-school-physics-slopetest-mu=0.50.json  moving-ground.json  rotating-slope.json
data/polyfem-data-jsons/2D/large-ratios/: circle-mat.json  large-mass-ratio.json  large-stiffness-ratio.json
data/polyfem-data-jsons/2D/static/: friction-slope.json
data/polyfem-data-jsons/2D/unit-tests/: 5-squares.json  edge-edge.json  edge-vertex.json  triangle-corner.json  vertex-edge.json  vertex-vertex.json
data/polyfem-data-jsons/2D/unit-tests/erleben/: cliff-edges.json  internal-edges.json  sliding-spike.json  spike-in-crack.json  spikes.json
data/polyfem-data-jsons/3D/: golf-ball.json
data/polyfem-data-jsons/3D/codimensional/: mat-knives.json
data/polyfem-data-jsons/3D/friction/: arch.json  armadillo-roller.json  ball-rollers.json  card-house.json  high-school-physics-slopetest-mu=0.49.json  high-school-physics-slopetest-mu=0.50.json  stick-slip.json
data/polyfem-data-jsons/3D/higher-order/: golf-ball-P1.json  golf-ball-P2.json
data/polyfem-data-jsons/3D/large-ratios/: large-mass-ratio.json  large-stiffness-ratio.json  sphere-mat.json
data/polyfem-data-jsons/3D/rigid/: screw.json
data/polyfem-data-jsons/3D/static/: two-cubes.json
data/polyfem-data-jsons/3D/stress-tests/: dolphin-funnel.json  mat-twist.json  rod-twist.json  squeeze-out.json  trash-compactor-octocat.json  trash-compactor-shapes.json
data/polyfem-data-jsons/3D/unit-tests/: 5-cubes-fast.json  5-cubes.json  edge-edge-parallel.json  edge-edge.json  face-vertex.json  tet-corner.json  vertex-face.json  vertex-vertex.json
data/polyfem-data-jsons/3D/unit-tests/erleben/: cliff-edges.json  internal-edges.json  sliding-spike.json  sliding-wedge.json  spike-and-wedge.json  spike-in-crack.json  spike-in-hole.json  spikes.json  wedge-in-crack.json  wedges.json
data/surf_mesh/: cube_dense.stl  plane_dense.stl  sphere.stl
data/vol_mesh/: cube_dense.msh  left_finger.msh  link_lab.msh  mat.msh  right_finger.msh  sphere.msh  sphere_grooved.msh
docs/: main.mako  main.md.mako  spec2html.py
scripts/: generate_defaults.py  graphviz.py  inject_include.py
src/: CMakeLists.txt  main.cpp
src/jse/: jse.cpp  jse.h
src/sjv/: sjv.cpp  sjv.h
tests/: .test_validator.cpp.swp  CMakeLists.txt  test_validator.cpp
tools/: jse_embed_spec.cpp
